# stock-prices

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  SKILL.md  app.json  go.mod  go.sum  jest.config.cjs  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
src/: app.controller.ts  app.module.ts  app.rs  error.rs  handlers.rs  index.ts  main.go  main.rs  main.ts  response.rs  service.ts  stock_prices.rs
src/app/: middleware.go  router.go  router_test.go
src/controllers/: quotes_controller.go  root_controller.go
src/models/: quote.go  responses.go
src/services/: errors.go  stock_prices.go
src/stock-prices/: stock-prices.controller.spec.ts  stock-prices.controller.ts  stock-prices.module.ts  stock-prices.service.spec.ts  stock-prices.service.ts  stock-prices.type.ts
src/views/: response.go
test/: app.e2e-spec.ts  jest-e2e.json  toon.ts
