[package]
name = "stock-prices"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", default-features = false, features = ["cookies", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
toon-format = { version = "0.4.5", default-features = false }
tower-http = { version = "0.6.8", features = ["cors"] }
